--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ rsconnect
 data/*.zip
 data/*.feather
 2008.csv
+cars2.csv
+cars3.csv
+00_import-data_literate-programming.nb.html
 
 # Example code in package build process
 *-Ex.R
